# cuda-nqueen

./: CMakeLists.txt  README.md  nqueen.cu
